<resources>
    <string name="app_name">Doação AACC</string>
    <string name="navigation_drawer_open">Abrir gaveta de navegacao</string>
    <string name="navigation_drawer_close">Fechar gaveta de navegacao</string>
    <string name="action_help">Ajuda</string>
    <string name="action_exit">Sair</string>
    <string name="action_politica">Politica</string>
    <string name="facebook_app_key">861f7b7d4231e3a77436baf6bc235f42</string>
    <string name="title_activity_login">Entrar</string>
    <string name="google_button_text">Entrar com Google</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (opcional)</string>
    <string name="action_sign_in">Entrar com o seu email</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_name">O nome deve ter pelo menos 3 digitos!</string>
    <string name="error_invalid_email">Este e-mail e invalido</string>
    <string name="error_invalid_password">Esta senha e muito curta</string>
    <string name="error_incorrect_password">Senha incorreta!</string>
    <string name="error_field_required">Este campo é requerido!</string>
    <string name="permission_rationale">"Permissoes de contato sao necessarias!"
    </string>
    <string name="title_activity_welcome">Bem Vindo</string>
    <string name="title_activity_tablayout">Você é mais!</string>
    <string name="title_activity_preference">Configuracoes</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="combo_estado">
        
        <item>São Paulo</item>
        

    </string-array>
    <string name="tipo_retirada">Tipo</string>
    <string-array name="tipo_periodo">
        <item>Matutino</item>
        <item>Vespertino</item>
        <item>Noturno</item>
    </string-array>
    <string-array name="listMinutos">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string-array name="listMinutosDesc">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>45 minutos</item>
        <item>1  hora</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Preferencias</string>
    <string name="btn_login_from_google">Entrar com Google</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="sign_out">Sair</string>
    <string name="disconnect">Desconectar</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="server_client_id">468221286402-44ti53d117iq43vlcjkc2djbaluhmtba.apps.googleusercontent.com</string>
    <string name="campanhas_prioritarias_fragment">Campanhas Prioritarias </string>
    <string name="perfil_fragment_fragment">Perfil do Usuario</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Sobre</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_campanha">CampanhaActivity</string>
    <string name="title_activity_doacao">DoacaoActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="imagem_usuario">Imagem Usuario</string>
    <string name="labelImagePerfil">Alterar imagem de perfil?</string>
    <string name="entre_com_o_nome_de_perfil">Entre com o nome de perfil</string>
    <string name="entre_com_o_email_de_perfil">Entre com o email de perfil</string>
    <string name="entre_com_o_logradouro_de_perfil">Entre com o Logradouro</string>
    <string name="title_activity_cupom_fiscal">CupomFiscal</string>
    <string name="qrcode_scanner">QRCode Scanner</string>
    <string name="read_code">Enviar Dados</string>
    <string name="doacao_na_conta_bancaria">Doação depósito bancário</string>
    <string name="path_adans">"Quando você cuida de alguém que realmente está precisando, você vira um herói. Porque o arquétipo de herói é a pessoa que, se precisar, enfrenta a escuridão e segue com amor e coragem porque acredita que algo pode ser mudado para melhor.\r\n\r\n Path Adams"</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="data">Data : </string>
    <string name="cnpj">CNPJ : </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="aperte_para_scannear">Aperte para habilitar o Scanner</string>
    <string name="como_doar">
           Como doar?
    </string>
    <string name="endereco">
        Rua Mascos Gandra Souza Crus Carvalho, 2345
        Bairro de Pinheiro - São Paulo - SP
        Cep: 09876-087
    </string>
    <string name="como_doar_explicacao">
        \r\n
     1)  Clique no botao camera abaixo.\r\n
     2)  Tire a foto do cupom fiscal.\r\n
     3)  Verifique a nitidez da imagem.\r\n
     4)  Clique em enviar.\r\n
     5)  Aguarde a confirmacao de envio.\r\n
    </string>
    <string name="title_activity_pagamento">PagamentoActivity</string>
    <string name="accept">accept</string>
    <string name="menu_pagseguro">pagseguro</string>
    <string name="menu_cupom_fiscail">cupom fiscal</string>
    <string name="title_activity_detalhe_evento">Detalhe do Evento</string>
    <string name="nome_responsavel">Nome</string>
    <string name="txt_nome_responsavel">Entre com o nome</string>
    <string name="lbl_telefone">Fone</string>
    <string name="lbl_celular">Cel</string>
    <string name="mascara_telefone">(99)9999-9999</string>
    <string name="mascara_celular"> (99)99999-9999</string>
    <string name="txt_descreva_aqui_retirar">Descreva aqui sua dúvidas, sugestões, requerimentos e etc.\r\n\r\n Exemplo: \r\n Vocês fazem retirada de doação?</string>
    <string name="pref_atualizar_title">Atualizar dados rede</string>
    <string name="pref_list_atualizar_dialog">Checar as atualizações a partir da rede a cada ?</string>
    <string name="pref_list_atualizar_summary">Verifica se a rede de dados ou wi-fi está ativa, para efetuar atualização de dados.</string>
    <string name="dados_de_retirada">Dados da mensagem</string>
    <string name="telefone_retirada">Fone</string>
    <string name="observacao">Mens</string>
    <string name="string_celular_retirar">Cel</string>
    <string name="search_hint">Pesquisar</string>
</resources>