<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_politica"
        android:orderInCategory="2"
        android:title="@string/action_politica"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="3"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="4"
        android:title="@string/action_exit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:visible="false"
        android:icon="@drawable/baseline_search_white_18dp"
        android:iconTint="@color/colorFontWhite"
        android:tooltipText="@string/search_hint"
        android:title="@string/search_hint"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
</menu>
