<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/lblDadosRetirada"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_span="2"
                    android:gravity="center_vertical"
                    android:text="@string/dados_de_retirada"
                    android:textAlignment="center"
                    android:textColor="@color/colorPreto"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tipo_retirada" />

                <TextView
                    android:id="@+id/lblTipoRetirada"
                    android:layout_weight="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/nome_responsavel" />

                <TextView
                    android:id="@+id/lblNome"
                    android:layout_weight="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/telefone_retirada" />

                <TextView
                    android:id="@+id/lblTelefone"
                    android:layout_weight="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/string_celular_retirar" />

                <TextView
                    android:id="@+id/lblCelular"
                    android:layout_weight="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:text="@string/observacao" />

                <TextView
                    android:id="@+id/lblObservacao"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"/>

            </TableRow>



        </TableLayout>
    </LinearLayout>



</LinearLayout>


